kubernetes/applications/edge-service/patch-regcred.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
